# NTCCalculator

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_cmake.yml  ccpp.yml  codeql-analysis.yml
cmake/: Conan.cmake
include/: NTCCalculator.h  ntc-sampling-point-calculator.h
source/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
