CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(ntc-compile-time)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_BUILD_PARALLEL_LEVEL 4)

IF(NOT MSVC)
    SET(CMAKE_CXX_FLAGS_DEBUG "-O0")
    SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic")
ELSE()
    SET(CMAKE_CXX_FLAGS_RELEASE "/O2")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3 /Wall")
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} source/main.cpp)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)